<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1ebeb">
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView android:id="@+id/tv_paint_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:textColor="#fff"
            android:padding="3dp"
            android:text="@string/color"/>
        <RadioGroup android:id="@+id/rg_fill_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_fill"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rb_fill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill" />
            <RadioButton android:id="@+id/rb_stroke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stroke"/>
        </RadioGroup>
        <EditText android:id="@+id/et_paint_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:visibility="invisible"
            android:maxLength="2"
            android:hint="@string/stroke"/>
        <TextView android:id="@+id/tv_paint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:padding="3dp"
            android:text="@string/text"/>
        <EditText android:id="@+id/et_paint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAlignment="center"
            android:visibility="invisible"
            android:maxLength="2"
            android:hint="@string/size"/>
        <Button android:id="@+id/b_paint_ok"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:padding="0dp"
            android:text="@string/ok"/>
    </LinearLayout>
</HorizontalScrollView>